--- a/FicheRecette/FicheRecette/Views/Utilisateur/ListeUtilisateur.cshtml
+++ b/FicheRecette/FicheRecette/Views/Utilisateur/ListeUtilisateur.cshtml
@@ -23,7 +23,8 @@
     }
 </div>
 <div>
-    <h2>Ajouter Utilisateur</h2>
+    <div class="Titre"><h2>Ajouter Utilisateur</h2></div>
+    
     <form asp-action="AjouterUtilisateur" asp-controller="Utilisateur" method="post">
         <div>
             <label>Nom : </label>
