--- a/FicheRecette/FicheRecette/wwwroot/css/FicheRecette.css
+++ b/FicheRecette/FicheRecette/wwwroot/css/FicheRecette.css
@@ -12,6 +12,7 @@ header  {
     height:130px
 }
 body .navbar-inverse {
+    padding-bottom:5px;
     background-color:gray;
     Color: white; 
 }
@@ -22,18 +23,21 @@ header nav a, .UserInfo {
 }
 
 header nav a:hover {
-    color: dodgerblue
+    color: royalblue ;
+    text-decoration:none
 }
 .container {
+   
     color: gray;
     font-family: Virginie
 }
 .Titre {
+    padding-top:20px;
+    color: #494949;
     text-align: center;
 }
 .wrapper {
-    background-color: lightblue;
-    width:100%;
+    background-color: lightblue;    
     margin: auto;
     padding: 50px;
     box-shadow: 0 0 5px #999;
@@ -41,8 +45,12 @@ header nav a:hover {
 body {
     background-color: gray;
 }
+h1 {
+    margin-top:20px;
+    color: #494949;
+}
 h2 {
-    
+    color: #494949;
     margin: 50px;
 }
 
@@ -54,6 +62,9 @@ label {
     font-size: 16px;
     margin: 15px;
 }
+centerimages {
+    text-align: center;
+}
 .imgRecette img {
     text-align: center;
     width: 100px;
@@ -61,22 +72,37 @@ label {
 }
 
 .titreRecette {
-    width: 100%;
-    font-size: 20px;
-    font-weight: bold;
-    color: gray;
+    font-size: 22px;
+    font-weight: normal;
+    color: #494949;
     margin: 0;
 }
-
+.row {
+    margin-right: -10px;
+    margin-left: -10px;
+}
 .Recette {
     padding: 5px;
     border: 1px solid gray;
-    margin-top: 10px;
-    background-color: lightgray;
+    margin-top: 5px;    
+    background-color: #EFEFEF;
+}
+.RecetteLine {
+    padding: 10px;
+    border: 1px solid gray;
+    margin: 10px;
+    margin-left:10px;
+    margin-right:10px;
+    background-color: #FFFFFF;
 }
 
 .filtre .btn {
     width: 100%
+}
+
+.ButtonD .btn {
+    margin-left:auto;
+    margin-right:auto;
 }
 
 .filtre {
