--- a/FicheRecette/FicheRecette/Views/Recette/ListeRecette.cshtml
+++ b/FicheRecette/FicheRecette/Views/Recette/ListeRecette.cshtml
@@ -27,7 +27,7 @@
                 </select>
             </div>
             <div class="col-lg-3">
-                <div><button type="submit" class="btn btn-default">Filtrer</button></div>                
+                <button type="submit" class="btn btn-default">Filtrer</button>                
             </div>
         </form>
     </div>
@@ -40,7 +40,7 @@
                     <img src="~/@r.Images[0].Url" />
                 </div>
             </div>
-            <div class="col-lg-8">
+            <div class="col-lg-7">
                 <div class="row">
                     <div class="col-lg-12 titreRecette">@r.NomRecette</div>
                 </div>
@@ -51,9 +51,9 @@
                     <div class="col-lg-12">Niveau de difficulté : @r.Difficulte</div>
                 </div>
             </div>
-            <div class="col-lg-2">
+            <div class="col-lg-3">
                 <div class="row">
-                    <div class="col-lg-12">Création de : @r.NomUtilisateur</div>
+                    <div class="col-lg-12">Création : @r.NomUtilisateur</div>
                 </div>
                 <div class="row">
                     <div class="col-lg-12">@r.Date</div>
