--- a/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Utilisateur/Index.cshtml
+++ b/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Utilisateur/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="col-md-12">
     <div class="Titre"><h1>Fiche Recette V1.0</h1></div>
     <div class="col-md-4">
-        <div classe="wrapper">
+        <div classe="row">
             <h2>Création de l'application.</h2>
              <ul>
                 <li>Conception et réalisation par Anthony Di-persio</li>
@@ -20,7 +20,7 @@
             <h2>Comment l'utiliser?</h2>
             <ul>
                 <li>Pour utiliser FicheRecette, cliquez sur "se connecter". </li>
-                <li>Vous devez vous enregistrer, complétez les champs dans la section "s'inscrire"</li>
+                <li>Vous devez vous enregistrer. Pour cela complétez les champs dans la section "s'inscrire"</li>
                 <li>Une fois l'enregistrement terminé vous avez acces au menu.</li>
                 <li>La section "Liste de recettes" vous donne une vues d'ensemble de votre livre de recette</li>
                 <li>Vous pouvez afficher les détails d'une recette ou utiliser le filtre de tri afin de l'affiner.</li>
