--- a/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Recette/ListeRecette.cshtml
+++ b/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Recette/ListeRecette.cshtml
@@ -1,12 +1,13 @@
 ﻿@using FicheRecette.Model;
 @model List<Recette>;
 
-<div class="Titre">
-    <h1 class="col-lg-12">Liste des Recettes</h1>
-</div>
 
 
-<div class="container Recette">
+<div class="Container Recette">
+    <div class="Titre">
+        <h2 class="col-lg-12">Liste des Recettes</h2>
+    </div>
+
 
     @if (Model.Count == 0)
     {
@@ -27,7 +28,7 @@
                 </select>
             </div>
             <div class="col-lg-3">
-                <button type="submit" class="btn btn-default">Filtrer</button>                
+                <button type="submit" class="btn btn-default">Filtrer</button>
             </div>
         </form>
     </div>
@@ -60,7 +61,8 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-12 ButtonD">
-                        <a class="btn btn-default">Detail</a>
+                        <a asp-action="Detail" asp-controller="Recette" asp-route-id="@r.Id">Detail</a>
+                        @*<a class="btn btn-default">Detail</a>*@
                     </div>
                 </div>
             </div>
