--- a/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Shared/_layoutFicheRecette.cshtml
+++ b/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Shared/_layoutFicheRecette.cshtml
@@ -12,10 +12,12 @@
 <body>
     <header>
         <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="row">
+                <div class="col-lg-12"><h1>Benvenuto nella casa di Tonino</h1></div>
+            </div>
             <div class="container">
-                <div class="row barreTitre">
-                    <div class="col-lg-12"><a asp-area="" asp-controller="Recette" asp-action="ListeRecette" class=""><img src="~/images/logo.png" /></a></div>
-                        </div>
+
+                @*<a asp-area="" asp-controller="Recette" asp-action="ListeRecette" class=""><img src="~/images/logo.png" /></a>*@
                 <div class="row barreBouton">
                     <div class="col-lg-offset-2"></div>
 
