--- a/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Recette/AjouterRecette.cshtml
+++ b/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Recette/AjouterRecette.cshtml
@@ -29,16 +29,20 @@
             }
         </div>
     </div>
-    <div class="row RecetteLine">
-        <form method="post" asp-controller="Recette" asp-action="AjouterRecettePost" enctype="multipart/form-data">
+    <form method="post" asp-controller="Recette" asp-action="AjouterRecettePost" enctype="multipart/form-data">
+        <div class="row RecetteLine">
+
 
             <label>Veuillez saisir le nom de la recette : </label>
             <div class="row1">
                 <input type="text" class="form-control" value="@Model.NomRecette" name="nomRecette" />
             </div>
+        </div>
+        <div class="row RecetteLine">
+
             <label>Choisissez la catégorie : </label>
             <div class="row1">
-                <select name="Categorie" class="form-control" >
+                <select name="Categorie" class="form-control">
                     <option></option>
                     @foreach (Category c in (ViewBag.Liste as List<Category>))
                     {
@@ -46,7 +50,8 @@
                     }
                 </select>
             </div>
-
+        </div>
+        <div class="row RecetteLine">
             <label>Choisissez le nombre de personne(s) : </label>
             <div class="row1">
                 <select name="NbPersonne" class="form-control" value="@Model.NbPersonne">
@@ -57,6 +62,8 @@
                     }
                 </select>
             </div>
+        </div>
+        <div class="row RecetteLine">
             <label>Choisissez la difficulté : </label>
             <div class="row1">
                 <select name="Difficulte" class="form-control" value="@Model.Difficulte">
@@ -68,67 +75,89 @@
 
                 </select>
             </div>
+        </div>
+        <div class="row RecetteLine">
+            @*<div class="col-lg-12">
+                @if ((ViewBag.errors != null))
+                {
+                    if ((ViewBag.errors as List<string>).Count > 0)
+                    {
+                        <div class="row">
+                            <div class="col-lg-12 alert alert-danger">
+                                @foreach (string e in (ViewBag.errors as List<string>))
+                                {
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            @e
+                                        </div>
+                                    </div>
+                                }
+                            </div>
+                        </div>
+                    }
+                }
+            </div>
+
+            <div class="col-lg-12">
+
+                @if (ViewBag.Ingredients != null)
+                {
+                    if (ViewBag.Ingredients)
+                    {
+                        <div class="row">
+                            <div class="col-lg-12 alert alert-success">
+                                @ViewBag.Message
+                            </div>
+                        </div>
+                    }
+                }
+            </div>
             <label>Veuillez saisir la liste des ingrédients : </label>
-            <div class="row1">
+
+            @if (Model.Count == 0)
+            {
+                <div>
+                    Aucun ingrédient.
+                </div>
+            }
+            @foreach (Ingredient i in Model)
+            {
+                <div>
+                    @i.Nom
+                    <a asp-action="DeleteIngredient" asp-controller="Recette" asp-route-id="@i.Id">Supprimer</a>
+                </div>
+            }
+            <div class="Titre"><h2>Ajouter les ingrédients :</h2></div>
+            <form asp-action="registerIngredient" asp-controller="recette" method="post">
+                <div class="row RecetteLine">
+                    <label>Nom de l'ingrédient : </label>
+                    <div class="row1">
+                        <input type="text" name="Titre" />
+                        <button type="submit">Ajouter</button>
+                    </div>
+                </div>
+            </form>*@
+                <div class="row1">
                 <textarea value="@Model.Ingredient" name="ingredient" class="form-control" placeholder="Liste d'ingrédients"> </textarea>
 
             </div>
+        </div>
+        <div class="row RecetteLine">
             <label>Veuillez saisir les étapes de la réalisation : </label>
             <div class="row1">
                 <textarea value="@Model.Realisation" name="realisation" class="form-control" placeholder="Description de la réalisation"> </textarea>
             </div>
+        </div>
+        <div class="row RecetteLine">
             <label>Ajouter une/des images(s) : </label>
             <div class="row1">
                 <input type="file" name="images" multiple placeholder="Les images de la recette" class="form-control" />
             </div>
-            <div class="row1">
-                <button type="submit" class="btn btn-default">Ajouter</button>
-            </div>
-        </form>
-    </div>
-</div>
-
-@*<div class="row">
-
-        <div class="Ajouter">
-            <div class="row">
-                <div class="container">
-
-                </div>
+        </div>
+        <div class="row RecetteLine">
+            <div class="btn">
+                <button type="submit">Ajouter</button>
             </div>
         </div>
-    </div>*@
-
-
-@*<div>
-        <h1>Ajouter une Recette</h1>
-        <form asp-action="AjouterRecette" asp-controller="Recette" method="post">
-            <div>
-                <label>Nom de la Recette : </label>
-                <input type="text" name="nomRecette" />
-            </div>
-            <div>
-                <label>Nombre de Personnes : </label>
-                <input type="text" name="nbPersonne" />
-            </div>
-            <div>
-                <label>Diffuculté : </label>
-                <input type="text" name="difficulte" />
-            </div>
-            <div>
-                <label>Ingredients : </label>
-                <input type="text" name="ingredient" />
-            </div>
-            <div>
-                <label>Réalisation : </label>
-                <input type="text" name="realisation" />
-            </div>
-
-
-
-    </div>
-    <div>
-        <button type="submit">Ajouter</button>
-    </div>
-        </form>
-    </div>*@
+    </form>
+</div>
