--- a/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Shared/_layoutFicheRecette.cshtml
+++ b/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Shared/_layoutFicheRecette.cshtml
@@ -56,5 +56,8 @@
     <section class="container">
         @RenderBody()
     </section>
+    <footer>
+        FicheRecetteV1.0a © Anthony Di Persio - Mars 2019
+    </footer>
 </body>
 </html>
