--- a/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Utilisateur/Index.cshtml
+++ b/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Utilisateur/Index.cshtml
@@ -3,7 +3,7 @@
 
 
 <div class="col-md-12">
-    <div class="Titre"><h1>Fiche Recette V1.0</h1></div>
+    <div class="Titre"><h1>Fiche Recette V1.0a</h1></div>
     <div class="col-md-4">
         <div classe="row">
             <h2>Création de l'application.</h2>
