--- a/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Recette/Detail.cshtml
+++ b/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Recette/Detail.cshtml
@@ -12,50 +12,50 @@
             <div class="CorpsRecette">
                 <div class="col-lg-12">
                     <div class="TitreBlanc">
-                        <h3>Informations :</h3></div>
-                        <div class="col-lg-8">
-                            <div class="row1">
-                                <div class="col-lg-12">Catégorie :@r.IdCategory</div>
-                            </div>
-                            <div class="row1">
-                                <div class="col-lg-12">Nombre de personne(s) : @r.NbPersonne</div>
-                            </div>
-                            <div class="row1">
-                                <div class="col-lg-12">Niveau de difficulté : @r.Difficulte</div>
-                            </div>
-                            <div class="row1">
-                                <div class="col-lg-12">Ajoutée par : @r.NomUtilisateur</div>
-                            </div>
+                        <h3>Informations :</h3>
+                    </div>
+                    <div class="col-lg-8">
+                        <div class="row1">
+                            <div class="col-lg-12">Catégorie :@r.IdCategory</div>
                         </div>
-                        <div class="col-lg-4 imagedroite">
-                            <div class="imgFiche">
-                                <img src="~/@r.Images[0].Url" />
-                            </div>
-
+                        <div class="row1">
+                            <div class="col-lg-12">Nombre de personne(s) : @r.NbPersonne</div>
+                        </div>
+                        <div class="row1">
+                            <div class="col-lg-12">Niveau de difficulté : @r.Difficulte</div>
+                        </div>
+                        <div class="row1">
+                            <div class="col-lg-12">Ajoutée par : @r.NomUtilisateur</div>
                         </div>
                     </div>
+                    <div class="col-lg-4 imagedroite">
+                        <div class="imgFiche">
+                            <img src="~/@r.Images[0].Url" />
+                        </div>
+
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row RecetteLine">
             <div class="row1">
                 <div class="col-lg-12">
                     <div class="TitreBlanc">
-                        <h3>Ingrédients : </h3></div>@r.Ingredient
-                    </div>
+                        <h3>Ingrédients : </h3>
+                    </div>@r.Ingredient
+                </div>
             </div>
         </div>
 
-            <div class="row RecetteLine">
-                <div class="row1">
-                    <div class="col-lg-12">
-                        <div class="TitreBlanc"><h3>Réalisation : </h3></div>@r.Realisation
-                    </div>
+        <div class="row RecetteLine">
+            <div class="row1">
+                <div class="col-lg-12">
+                    <div class="TitreBlanc"><h3>Réalisation : </h3></div>@r.Realisation
                 </div>
             </div>
-
-
-                }
-            </div>
+        </div>
+    }
+</div>
 
 
 
