--- a/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Recette/ListeCategory.cshtml
+++ b/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Recette/ListeCategory.cshtml
@@ -1,71 +1,73 @@
 ﻿@using FicheRecette.Model;
 @model List<Category>;
 
-<div class="row">
+<div class="Container Recette">
+
+    <div class="Titre"> <h2>Liste des Catégories</h2></div>
+
     <div class="col-lg-12">
         @if ((ViewBag.errors != null))
         {
             if ((ViewBag.errors as List<string>).Count > 0)
             {
-                <div class="row">
-                    <div class="col-lg-12 alert alert-danger">
-                        @foreach (string e in (ViewBag.errors as List<string>))
-                        {
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    @e
+                <div class="row RecetteLine">
+                    <div class="row">
+                        <div class="col-lg-12 alert alert-danger">
+                            @foreach (string e in (ViewBag.errors as List<string>))
+                            {
+                                <div class="row">
+                                    <div class="col-lg-12">
+                                        @e
+                                    </div>
                                 </div>
-                            </div>
-                        }
+                            }
+                        </div>
                     </div>
                 </div>
             }
         }
-    </div>
-    <div class="Categories">
-        <div class="row">
 
-            @if (ViewBag.Categories != null)
+        @if (ViewBag.Categories != null)
+        {
+            if (ViewBag.Categories)
             {
-                if (ViewBag.Categories)
-                {
+                <div class="row RecetteLine">
                     <div class="row">
                         <div class="col-lg-12 alert alert-success">
                             @ViewBag.Message
                         </div>
                     </div>
-                }
+                </div>
             }
-        </div>
-        
+        }
     </div>
-</div>
-<div>
-    <div class="Titre"> <h1>Liste Catégories</h1></div>
-   
-    @if (Model.Count == 0)
-    {
-        <div>
-            Aucune Catégorie
-        </div>
-    }
-    @foreach (Category c in Model)
-    {
-        <div>
-            @c.Titre
-            <a asp-action="DeleteCategory" asp-controller="Recette" asp-route-id="@c.Id">Supprimer</a>
-        </div>
-    }
-</div>
-<div class="Titre"><h2>Ajouter une categorie</h2></div>
-<div>
+    <div class="row RecetteLine">
+        @if (Model.Count == 0)
+        {
+            <div>
+                Aucune Catégorie
+            </div>
+        }
+        @foreach (Category c in Model)
+        {
+            <div>
+                Nom :@c.Titre
+                <a asp-action="DeleteCategory" asp-controller="Recette" asp-route-id="@c.Id"> - Supprimer</a>
+            </div>
+        }
+
+    </div>
+
+    <div class="Titre"><h2>Ajouter une Catégorie</h2></div>
     <form asp-action="RegisterCategory" asp-controller="recette" method="post">
-        <div>
-            <label>Titre : </label>
-            <input type="text" name="Titre" />
+        <div class="row RecetteLine">
+            <label>Nom de la Catégorie : </label>
+            <div class="row1">
+                <input type="text" name="Titre" />
+                <button type="submit">Ajouter</button>
+            </div>
         </div>
-        <div>
-            <button type="submit">Ajouter</button>
-        </div>
-</form>
+    </form>
+    
 </div>
+
