--- a/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Recette/ListeDifficulte.cshtml
+++ b/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Recette/ListeDifficulte.cshtml
@@ -1,74 +1,98 @@
 ﻿@using FicheRecette.Model;
 @model List<Difficulte>;
-@{
 
-}
-<div class="row">
+<div class="Container Recette">
+
     <div class="col-lg-12">
         @if ((ViewBag.errors != null))
         {
             if ((ViewBag.errors as List<string>).Count > 0)
             {
-                <div class="row">
-                    <div class="col-lg-12 alert alert-danger">
-                        @foreach (string e in (ViewBag.errors as List<string>))
-                        {
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    @e
+                <div class="row RecetteLine">
+                    <div class="row">
+                        <div class="col-lg-12 alert alert-danger">
+                            @foreach (string e in (ViewBag.errors as List<string>))
+                            {
+                                <div class="row">
+                                    <div class="col-lg-12">
+                                        @e
+                                    </div>
                                 </div>
-                            </div>
-                        }
+                            }
+                        </div>
                     </div>
                 </div>
             }
         }
     </div>
-    <div class="Categories">
-        <div class="row">
 
-            @if (ViewBag.Difficulte != null)
+    <div class="col-lg-12">
+
+        @if (ViewBag.Difficulte != null)
+        {
+            if (ViewBag.Difficulte)
             {
-                if (ViewBag.Difficulte)
-                {
+                <div class="row RecetteLine">
                     <div class="row">
                         <div class="col-lg-12 alert alert-success">
                             @ViewBag.Message
                         </div>
                     </div>
-                }
+                </div>
             }
-        </div>
-
+        }
     </div>
-</div>
-<div>
-    <div class="Titre"><h1>Liste Difficulté</h1></div>
-    
-    @if (Model.Count == 0)
-    {
-        <div>
-            Aucune Difficulté
-        </div>
-    }
-    @foreach (Difficulte d in Model)
-    {
-        <div>
-            @d.Titre
-            <a asp-action="DeleteDifficulte" asp-controller="Recette" asp-route-id="@d.Id">Supprimer</a>
-        </div>
-    }
-</div>
-<div>
+
+    <div class="Titre"><h2>Liste Difficulté</h2></div>
+
+    <div class="row RecetteLine">
+
+
+        @if (Model.Count == 0)
+        {
+            <div>
+                Aucune Difficulté
+            </div>
+        }
+        @foreach (Difficulte d in Model)
+        {
+            <div>
+                @d.Titre
+                <a asp-action="DeleteDifficulte" asp-controller="Recette" asp-route-id="@d.Id">Supprimer</a>
+            </div>
+        }
+    </div>
+
     <div class="Titre"><h2>Ajouter une Difficulté</h2></div>
-    
-    <form asp-action="registerdifficulte" asp-controller="recette" method="post">
-        <div>
-            <label>Titre : </label>
-            <input type="text" name="Titre" />
-        </div>
-        <div>
-            <button type="submit">Ajouter</button>
-        </div>
+    <form asp-action="registerdifficulte" asp-controller="recette" method="post">       
+
+            <div class="row RecetteLine">
+                <label>Nom de la Difficulté : </label>
+                <div class="row1">
+                    <input type="text" name="Titre" />
+                    <button type="submit">Ajouter</button>
+                </div>
+            </div>
+        
     </form>
+
+
+
+
+
+
+
+
+
+
+
+</div>
+
+<div>
+
+</div>
+<div>
+
+
+
 </div>
