--- a/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Recette/ListeRecette.cshtml
+++ b/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Recette/ListeRecette.cshtml
@@ -15,11 +15,10 @@
             Aucune recette dans la base de données ! ! !
         </div>
     }
-
     <div class="row filtre">
         <form asp-controller="Recette" asp-action="Index" method="get">
             <div class="col-lg-9">
-                <select name="idCategory" class="form-control">
+                <select name="IdCategory" class="form-control">
                     <option></option>
                     @foreach (Category c in (ViewBag.categories as List<Category>))
                     {
@@ -33,8 +32,10 @@
         </form>
     </div>
 
+
     @foreach (Recette r in Model)
     {
+
         <div class="row RecetteLine">
             <div class="col-lg-2 centerimages">
                 <div class="imgRecette">
@@ -43,7 +44,7 @@
             </div>
             <div class="col-lg-7">
                 <div class="row">
-                    <div class="col-lg-12 titreRecette">@r.NomRecette</div>
+                    <a asp-action="Detail" asp-controller="Recette" asp-route-id="@r.Id"> <div class="col-lg-12 titreRecette">@r.NomRecette</div></a>
                 </div>
                 <div class="row">
                     <div class="col-lg-12">Nombre de personne(s) : @r.NbPersonne</div>
@@ -60,10 +61,7 @@
                     <div class="col-lg-12">@r.Date</div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-12 ButtonD">
-                        <a asp-action="Detail" asp-controller="Recette" asp-route-id="@r.Id">Detail</a>
-                        @*<a class="btn btn-default">Detail</a>*@
-                    </div>
+                    <div class="col-lg-12">Catégorie : @r.IdCategory</div>
                 </div>
             </div>
         </div>
