--- a/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Recette/ListeRecette.cshtml
+++ b/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Recette/ListeRecette.cshtml
@@ -61,7 +61,7 @@
                     <div class="col-lg-12">@r.Date</div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-12">Catégorie : @r.IdCategory</div>
+                    <div class="col-lg-12">Catégorie : @r.NomCategory</div>
                 </div>
             </div>
         </div>
