--- a/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Recette/Detail.cshtml
+++ b/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Recette/Detail.cshtml
@@ -16,7 +16,7 @@
                     </div>
                     <div class="col-lg-8">
                         <div class="row1">
-                            <div class="col-lg-12">Catégorie :@r.IdCategory</div>
+                            <div class="col-lg-12">Catégorie :@r.NomCategory</div>
                         </div>
                         <div class="row1">
                             <div class="col-lg-12">Nombre de personne(s) : @r.NbPersonne</div>
