--- a/FicheRecetteASP_NET_Core_MCV/FicheRecette/wwwroot/css/FicheRecette.css
+++ b/FicheRecetteASP_NET_Core_MCV/FicheRecette/wwwroot/css/FicheRecette.css
@@ -46,7 +46,7 @@ footer {
     margin: auto;
 }
 .Titre {
-    /*padding-top: 10px;*/
+    padding-top: 10px;
     color: #494949;
     text-align: center;
     font-family: Virginie
