--- a/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Recette/AjouterRecette.cshtml
+++ b/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Recette/AjouterRecette.cshtml
@@ -104,9 +104,11 @@
         </div>
 
         <div class="row RecetteLine">
-            <div class="btn">
-                <button type="submit">Ajouter</button>
-            </div>
+            <div class="row1">
+                <div class="text-center">
+                    <button type="submit">Ajouter</button>
+                </div>
+            </div>            
         </div>
     </form>
 </div>
