--- a/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Utilisateur/ListeUtilisateur.cshtml
+++ b/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Utilisateur/ListeUtilisateur.cshtml
@@ -16,7 +16,7 @@
             @foreach (Utilisateur u in Model)
             {
                 <div>
-                    Nom d'utilisateur : @u.NomUtilisateur  - Adresse email : @u.EMail - Nombre de recettes(s) crée(s) :  @u.NbRecettecree - <a asp-action="SupprimerUtilsateur" asp-controller="Utilisateur" asp-route-id="@u.Id">Supprimer</a>
+                    Nom d'utilisateur : @u.NomUtilisateur  - Adresse email : @u.EMail - Nombre de recettes(s) crée(s) :  @u.NbRecettecree - Administrateur : @u.Admin - <a asp-action="SupprimerUtilsateur" asp-controller="Utilisateur" asp-route-id="@u.Id">Supprimer</a>
                 </div>
             }
         </div>
@@ -37,6 +37,11 @@
                 <input type="password" name="Mdp" />
                 <label>Confirmer le mot de passe : </label>
                 <input type="password" name="cMdp" />
+                <label>Administrateur : </label>
+                <select type="text" name="Admin" size="1" value="Admin">
+                    <option value="true">Oui</option>
+                    <option value="false">Non</option>                    
+                </select>
             </div>
             <div>
                 <button type="submit">Ajouter</button>
